fix tools button text and icon alignment

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -6786,6 +6786,12 @@ body .ui-autocomplete.dictionary-toc-autocomplete .ui-menu-item a.ui-state-focus
   flex-wrap: wrap;
 }
 
+.toolsButtonContainer .toolsButtonText,
+.toolsButtonContainer .toolsSecondaryButton {
+  position: relative;
+  top: 1.5px;
+}
+
 .toolsButton {
   background: none;
   padding: 0;
